--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
    </div>
 
     <div class="area-right">
-       <h2 id="wins">Wins:</h2>
-       <h3 id="losses">Losses:</h3>
+       <h2>Wins:<span id="wins"></span></h2>
+       <h3>Losses:<span id="losses"></span></h3>
     </div>
 
 
@@ -41,7 +41,7 @@
     </div>
  
     <div class="score">
-      <h5>Your score is:</h5>  
+      <h5>Your score is:<span id="yourScore"></span></h5>  
     </div>
 
     <div id="current-score">
